--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -21,7 +21,7 @@ jobs:
           Rscript -e "install.packages(c('xaringan'))"
       - name: Render
         run: |
-          mkdir .public
+          mkdir -p public
           Rscript -e 'rmarkdown::render("slides.Rmd", output_file = "public/index.html")'
       - uses: actions/upload-artifact@v2
         with:
