--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Render
         run: |
           mkdir -p public
-          Rscript -e 'rmarkdown::render("slides.Rmd", output_file = "public/index.html")'
+          Rscript -e 'rmarkdown::render("slides-colab.Rmd", output_file = "public/index.html")'
       - uses: actions/upload-artifact@v2
         with:
           name: Slides
