--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -30,10 +30,10 @@ jobs:
           path: public/
           retention-days: 3
       - name: Install npm
-        if: ${{ github.repository == 'inseefrlab/utilitr-prez' }}
+        if: ${{ github.repository == 'inseefrlab/utilitr-presentation' }}
         uses: actions/setup-node@v1
       - name: Deploy to Netlify
-        if: ${{ github.repository == 'inseefrlab/utilitr-prez' }}
+        if: ${{ github.repository == 'inseefrlab/utilitr-presentation' }}
         # NETLIFY_AUTH_TOKEN and NETLIFY_SITE_ID added in the repo's secrets
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
