--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           node-version: '12'
       - name: Deploy to Netlify
-        if: ${{ github.repository == 'inseefrlab/utilitr-prez' }}
+        if: ${{ github.repository == 'inseefrlab/utilitr-presentation' }}
         # NETLIFY_AUTH_TOKEN and NETLIFY_SITE_ID added in the repo's secrets
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
