--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -20,6 +20,7 @@ jobs:
           Rscript -e "install.packages('xfun')"
           Rscript -e "install.packages(c('xaringan'))"
           Rscript -e "install.packages(c('fontawesome'))"
+          Rscript -e "install.packages(c('emo'))"
       - name: Render
         run: |
           mkdir -p public
