--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -30,6 +30,9 @@ jobs:
           name: Slides
           path: public/
           retention-days: 3
+      - name: Les ateliers
+        run: |
+          Rscript -e 'ateliers/build.R'
       - name: Install npm
         if: ${{ github.repository == 'inseefrlab/utilitr-presentation' }}
         uses: actions/setup-node@v1
@@ -43,5 +46,6 @@ jobs:
           npm install --unsafe-perm=true netlify-cli -g
           netlify init
           netlify deploy --prod --dir="public" --message "Deploy master"
+          netlify deploy --alias=ateliers --dir="ateliers" --message "Deploy ateliers"
 
 
