--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -30,7 +30,7 @@ jobs:
           retention-days: 3
       - name: Les ateliers
         run: |
-          Rscript -e 'ateliers/build.R'
+          Rscript -e "source('ateliers/build.R')"
       - name: Install npm
         if: ${{ github.repository == 'inseefrlab/utilitr-presentation' }}
         uses: actions/setup-node@v1
