--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
           retention-days: 3
       - name: Les ateliers
         run: |
-          Rscript ateliers/build.R
+          Rscript -e "source('ateliers/build.R')"
       - name: Install npm
         if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
         uses: actions/setup-node@v2
