--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,7 @@ jobs:
           retention-days: 3
       - name: Les ateliers
         run: |
+          mkdir -p atelier_out
           Rscript -e "source('ateliers/build.R')"
       - name: Install npm
         if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
