le dossier n'existaity pas

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,11 @@ jobs:
         run: |
           mkdir -p atelier_out
           Rscript -e "source('ateliers/build.R')"
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Ateliers
+          path: atelier_out/
+          retention-days: 3
       - name: Install npm
         if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
         uses: actions/setup-node@v2
@@ -50,6 +55,6 @@ jobs:
           npm install --unsafe-perm=true netlify-cli -g
           netlify init
           netlify deploy --alias=${BRANCHE_REF} --dir="public" --message "Test deploy"
-          netlify deploy --alias=ateliers --dir="test-ateliers" --message "Deploy test ateliers"
+          netlify deploy --alias=testateliers --dir="ateliers" --message "Deploy test ateliers"
 
 
