--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: Ateliers
-          path: atelier_out/
+          path: ateliers/
           retention-days: 3
       - name: Install npm
         if: ${{ github.repository == 'inseefrlab/utilitr-presentation' }}
