--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: Ateliers
-          path: atelier_out/
+          path: ateliers/
           retention-days: 3
       - name: Install npm
         if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
