--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@ slides_files
 slides.html
 *.gitignore
 *.Rproj
+.Renviron
+*.html
 atelier_*.html
 ateliers/*.html
 ateliers/libs/*
 ateliers/css/*
+
