--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -25,6 +25,8 @@ jobs:
           mkdir -p publicdoc
           Rscript -e 'rmarkdown::render("slides-colab.Rmd")'
           Rscript -e 'rmarkdown::render("slides-doc.Rmd")'
+          Rscript -e "file.copy(here::here('resources'), here::here('public'), recursive = TRUE)"
+          Rscript -e "file.copy(here::here('resources'), here::here('publicdoc'), recursive = TRUE)"
           mv slides-colab.html public/index.html
           mv slides-doc.html publicdoc/index.html
       - uses: actions/upload-artifact@v2
