--- a/.github/workflows/ateliers.yml
+++ b/.github/workflows/ateliers.yml
@@ -1,9 +1,10 @@
-name: Example output
+name: Slides des ateliers
 
 on:
   push:
-    branches:
-      - master
+    tags:
+      - 'v*.*.*'
+
 
 jobs:
   xaringan-presentations:
