--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  bookdown-prod:
+  xaringan-presentations:
     if: "!contains(github.event.commits[0].message, '[skip ci]')"
     runs-on: ubuntu-latest
     container: inseefrlab/utilitr:latest
@@ -23,8 +23,7 @@ jobs:
       - name: Render
         run: |
           mkdir -p public
-          Rscript -e 'rmarkdown::render("slides-colab.Rmd")'
-          mv slides-colab.html public/index.html
+          Rscript -e 'source("build/build.R")'
       - uses: actions/upload-artifact@v2
         with:
           name: Slides
@@ -32,17 +31,14 @@ jobs:
           retention-days: 3
       - name: Install npm
         if: ${{ github.repository == 'inseefrlab/utilitr-presentation' }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: '12'
+        uses: actions/setup-node@v1
       - name: Deploy to Netlify
         if: ${{ github.repository == 'inseefrlab/utilitr-presentation' }}
         # NETLIFY_AUTH_TOKEN and NETLIFY_SITE_ID added in the repo's secrets
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          BRANCHE_REF: ${{ github.event.pull_request.head.ref }}
         run: |
           npm install --unsafe-perm=true netlify-cli -g
           netlify init
-          netlify deploy --alias=${BRANCHE_REF} --dir="public" --message "Test deploy"
+          netlify deploy --alias=test --dir="public" --message "Deploy master"
