--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,18 @@ slides.html
 *.html
 
 ateliers/*
-!archives/*.Rmd
 !archives/build.R
 
 public/*
 
-archives/*
+# archives/*
+archives/resources/*
+archives/libs/*
+archives/css/*
+archives/**/resources
+archives/**/css
+archives/**/libs
 !archives/*.Rmd
+!archives/matinees2021/*.Rmd
 
 soumissions/*.pdf
