Une intégration continue plus propre (#15)
* automatisation build

* rename

* améliore gitignore

* metadata

* redéfinit le workflow

* intégratoin prez pyb

* archives présentations

* corrige erreur nom

* ajoute atelier pyb

* renomme atelier pyb

* modif nom

* regle pb cghemins

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,22 @@ slides.html
 *.Rproj
 .Renviron
 *.html
-atelier_*.html
-ateliers/*.html
-ateliers/libs/*
-ateliers/css/*
 
+ateliers/*
+!ateliers/*.Rmd
+
+
+public/*
+
+# archives/*
+archives/resources/*
+archives/libs/*
+archives/css/*
+archives/**/resources
+archives/**/css
+archives/**/libs
+#!archives/build.R
+#!archives/*.Rmd
+#!archives/matinees2021/*.Rmd
+
+soumissions/*.pdf
