--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ jobs:
           GITHUB_PAT: ${{ secrets.PAT }}
         uses: actions/checkout@master
       - name: Install Dependencies
+        env:
+          GITHUB_PAT: ${{ secrets.PAT }}
         run: |
           Rscript -e "install.packages(c('remotes'))"
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
