--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -32,7 +32,9 @@ jobs:
           retention-days: 3
       - name: Install npm
         if: ${{ github.repository == 'inseefrlab/utilitr-presentation' }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
       - name: Deploy to Netlify
         if: ${{ github.repository == 'inseefrlab/utilitr-presentation' }}
         # NETLIFY_AUTH_TOKEN and NETLIFY_SITE_ID added in the repo's secrets
