--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,11 @@ jobs:
     steps:
       - name: Checkout Repository
         env:
-          GITHUB_PAT: ${{ secrets.PAT }}
+          GITHUB_PAT: ${{ secrets.PAT_GITHUB }}
         uses: actions/checkout@master
       - name: Install Dependencies
+        env:
+          GITHUB_PAT: ${{ secrets.PAT_GITHUB }}
         run: |
           Rscript -e "install.packages(c('remotes'))"
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
@@ -31,7 +33,9 @@ jobs:
           retention-days: 3
       - name: Install npm
         if: ${{ github.repository == 'inseefrlab/utilitr-presentation' }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
       - name: Deploy to Netlify
         if: ${{ github.repository == 'inseefrlab/utilitr-presentation' }}
         # NETLIFY_AUTH_TOKEN and NETLIFY_SITE_ID added in the repo's secrets
